--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,57 +3,88 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:background="@color/colorPrimary"
   tools:context=".MainActivity">
 
-  <ImageView
-    android:id="@+id/logo"
+  <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
-    android:layout_height="114dp"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="20dp"
-    android:src="@drawable/icono"
-    android:padding="20dp"/>
-
-  <Button
-    android:id="@+id/question"
-    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginTop="182dp"
-    android:text="Question"
-    android:textSize="20sp" />
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-  <Button
-    android:id="@+id/record"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="204dp"
-    android:text="Record"
-    android:textSize="20sp" />
+    <android.support.v7.widget.Toolbar
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="?attr/actionBarSize"
+      android:background="?attr/colorPrimary"
+      android:visibility="gone"
+      app:layout_scrollFlags="scroll|enterAlways"
+      app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-  <Button
-    android:id="@+id/stop"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="126dp"
-    android:text="Stop"
-    android:textSize="20sp" />
+    <android.support.design.widget.TabLayout
+      android:id="@+id/tabs"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:tabMaxWidth="0dp"
+      app:tabGravity="fill"
+      app:tabMode="fixed"/>
+  </android.support.design.widget.AppBarLayout>
 
-  <Button
-    android:id="@+id/play"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="40dp"
-    android:text="Play"
-    android:textSize="20sp" />
+  <android.support.v4.view.ViewPager
+    android:id="@+id/viewpager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+
+  <!--<ImageView-->
+    <!--android:id="@+id/logo"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="114dp"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginTop="20dp"-->
+    <!--android:src="@drawable/icono"-->
+    <!--android:padding="20dp"/>-->
+
+  <!--<Button-->
+    <!--android:id="@+id/question"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginTop="182dp"-->
+    <!--android:text="Question"-->
+    <!--android:textSize="20sp" />-->
+
+  <!--<Button-->
+    <!--android:id="@+id/record"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginBottom="204dp"-->
+    <!--android:text="Record"-->
+    <!--android:textSize="20sp" />-->
+
+  <!--<Button-->
+    <!--android:id="@+id/stop"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginBottom="126dp"-->
+    <!--android:text="Stop"-->
+    <!--android:textSize="20sp" />-->
+
+  <!--<Button-->
+    <!--android:id="@+id/play"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_marginBottom="40dp"-->
+    <!--android:text="Play"-->
+    <!--android:textSize="20sp" />-->
 
 
 </RelativeLayout>
